Fixed overlap of tabs
padding issue and tabs sliding issue.

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   
 
 }
+body {
+  font-family: 'Roboto', sans-serif; /* Use Roboto font with fallback to sans-serif */
+}
+
 
 /* .image-container {
   position: relative;
